@@ -1,3 +1,8 @@
+2008-08-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ test/test_helpers.hxx, test085.cxx:
+  - Moved string_traits<result> into test helpers for reuse.
+ test/test008.cxx:
+  - Converted to test framework.
 2008-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
  test/test004.cxx, test/test005.cxx, test/test006.cxx, test/test007.cxx:
   - Converted to test framework.
